--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,13 +23,13 @@ jobs:
           cache: yarn
 
       - name: 'Install packages'
-        run |
+        run: |
           yarn install --pure-lockfile
 
       - name: 'Setup test database'
         env:
           RAILS_ENV: test
-        run |
+        run: |
           bin/rails db:setup
 
       - name: 'Run tests'
