--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,3 +40,18 @@ jobs:
       - name: 'Run tests'
         run: bundle exec rubocop
 
+  Security-Check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v2
+
+      - name: 'Setup Ruby and install gems'
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
+      - name: 'Run Breakman'
+        run: bundle exec breakman
+
