--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,3 +55,15 @@ jobs:
       - name: 'Run Breakman'
         run: bundle exec brakeman
 
+  Build-Container:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 'Checkout code'
+        uses: actions/checkout@v2
+
+      - name: 'Build Docker container'
+        uses: docker/build-push-action@v2
+        with: 
+          context: .
+          tags: 'first'
