--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,7 +55,7 @@ jobs:
       - name: 'Run Breakman'
         run: bundle exec brakeman
 
-  Build-Container:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -63,7 +63,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: 'Build Docker container'
-        uses: docker/build-push-action@v2
-        with: 
-          context: .
-          tags: 'first'
+        run: |
+          docker build -t 'first'
