--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,4 +64,4 @@ jobs:
 
       - name: 'Build Docker container'
         run: |
-          docker build -t 'first'
+          docker build . -t sample_api
