docker build command

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,4 +64,4 @@ jobs:
 
       - name: 'Build Docker container'
         run: |
-          docker build . -t sample_api
+          docker build docker/ -t sample_api
