--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 'Run tests'
         run: bundle exec rspec
 
-  Run-Linter:
+  Linter:
     runs-on: ubuntu-latest
 
     steps:
@@ -57,6 +57,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: [RSpec, Linter, Security-Check]
 
     steps:
       - name: 'Checkout code'
