--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -70,6 +70,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: 'Build Docker container'
+      - name: 'AWS ECR Login'
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: 'Build, tag and push image to amazon ECR'
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: docker_rails_api_sample
+          IMAGE_TAG: rails_api_demo_image
         run: |
-          docker build . -f docker/Dockerfile -t sample_api
+          docker build . -f docker/Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
