--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -75,9 +75,11 @@ jobs:
 
       - name: 'Build, tag and push image to amazon ECR'
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs }}
+            #ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: docker_rails_api_sample
           IMAGE_TAG: rails_api_demo_image
         run: |
+          echo $ECR_REGISTRY
           docker build . -f docker/Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
