--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,10 @@ jobs:
           bin/rails db:setup
 
       - name: 'Run tests'
-        run: bundle exec rspec
+        id: rspec
+        run: |
+          bundle exec rspec
+          echo "COVERAGE=$(bundle exec rspec | awk 'END{print}' | grep -oE '[\.0-9]{1,3}\.[0-9]{1,3}')" >> $GITHUB_OUTPUT
 
   Linter:
     runs-on: ubuntu-latest
