--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,9 @@ jobs:
           bundle exec rspec
           echo "COVERAGE=$(bundle exec rspec | awk 'END{print}' | grep -oE '[\.0-9]{1,3}\.[0-9]{1,3}')" >> $GITHUB_OUTPUT
 
+      - name: 'Check code coverage is 100%'
+        run: if [ "${{ steps.rspec.outputs.COVERAGE }}" != "100.0" ]; then exit 1; fi
+
   Linter:
     runs-on: ubuntu-latest
 
