--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -93,6 +93,13 @@ jobs:
     needs: [Build]
 
     steps:
+      - name: 'Configure AWS Credentials'
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
       - name: 'AWS ECR Login'
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
