--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,9 @@
 on: 
   push:
-    tags:
-      - '*-rc'
+    branches:
+      - 'main'
+        #    tags:
+        #      - '*-rc'
 
 jobs:
   RSpec:
@@ -108,7 +110,7 @@ jobs:
         id: task-definition
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: task-definition.json
+          task-definition: ./task-definition.json
           container-name: api
           image: ${{ steps.login-ecr.outputs.registry }}/docker_rails_api_sample:${{ github.ref_name }}
 
