--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,7 +6,7 @@ on:
         #      - '*-rc'
 
 env:
-  ECS_TASK_DEFINITION: .aws/task_definition.json
+  ECS_TASK_DEFINITION: ./task_definition.json
 
 jobs:
   RSpec:
@@ -116,7 +116,7 @@ jobs:
         id: task-definition
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ${{ env.ESC_TASK_DEFINITION }}
+          task-definition: ${{ env.ECS_TASK_DEFINITION }}
           container-name: api
           image: ${{ steps.login-ecr.outputs.registry }}/docker_rails_api_sample:${{ github.ref_name }}
 
