[CHORE] Fix Service

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -124,5 +124,5 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-definition.outputs.task-definition }}
-          service: my-api
+          service: API-SERVICE
           cluster: DevCluster
